--- a/EmpInfo/Views/Apply/BeginAuditXAApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditXAApply.cshtml
@@ -656,11 +656,13 @@
                 1. 流程步骤：流程开始--->提交申请--->收益提供人审批(如没有可跳过)--->设备科负责人审批--->生产部主管审批--->部门总经理审批--->
                 采购部接单--->申请人上传施工清单--->设备科负责人处理--->项目类别负责人(监控类/网络类)--->采购部上传报价单--->
                 管理部会签（项目大类负责人、节省与监督审批人）--->部门总经理确认--->审核部最终确认--->申请人验收项目--->设备负责人验收--->
-                生产主管验收--->部门总经理验收--->项目大类负责人验收--->流程结束。
+                生产主管验收--->部门总经理验收--->信息管理部验收（网络类）--->项目大类负责人验收--->流程结束。
                 <br />
                 2. 如果部门有设置CEO，那么部门总经理审批后，采购部接单前，系统会推送通知给CEO。
                 <br />
                 3. 申请人上传施工清单，设备科负责人处理后，采购部上传报价单前，系统会推送通知给项目大类负责人。
+                <br/>
+                4. 审核部最终确认后，申请人验收项目前，系统会推送通知给采购部接单员。
             </p>
         </div>
     </div>
