--- a/EmpInfo/Views/Report/PrintXA.cshtml
+++ b/EmpInfo/Views/Report/PrintXA.cshtml
@@ -43,7 +43,7 @@
         <div>项目单号：@h.bill_no</div>
     </div>*@
 <div style="width:640px;margin:0 auto;padding-top:18px;">
-    <div style="text-align:center;font-weight:bold;font-size:15px;margin-bottom:20px;">@h.company 项目申请单</div>
+    <div style="text-align:center;font-weight:bold;font-size:15px;margin-bottom:20px;">@h.company.Replace("1","").Replace("2","") 项目申请单</div>
     <table style="width:100%;" id="reportTb">        
         <tr>
             <td style="width:20%;" class="rp_title">审批编号:</td>
